--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,3 +13,4 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
+//mongodb+srv://simsbury65:<password>@cluster0.vai5lbz.mongodb.net/?retryWrites=true&w=majority
