fix regex mongo

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 MONGO_URL="mongodb+srv://simsbury65:incubator@cluster0.vai5lbz.mongodb.net/?retryWrites=true&w=majority"
 
-SECRET_KEY="YOURSECRETKEYGOESHERE"
+SECRET_KEY="cAtwa1kkEy"
 BASICAUTH= "admin:qwerty"
 
-// password mongo rerererere
