--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@types/jest": "^29.5.0",
     "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jest": "^29.5.0",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.22",
