--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
+    "nodemailer": "^6.9.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0"
   },
