--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
