--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/jest": "^29.5.0",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jest": "^29.5.0",
@@ -21,7 +23,8 @@
     "mongodb": "^5.2.0",
     "nodemailer": "^6.9.1",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
