adding recovery field in errors messages

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb+srv://simsbury65:incubator@cluster0.vai5lbz.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://simsbury65:incubator@cluster0.vai5lbz.mongodb.net/forum?retryWrites=true&w=majority"
 
 SECRET_KEY="cAtwa1kkEy"
 BASICAUTH= "admin:qwerty"
