--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", ]
 }
 //mongodb+srv://simsbury65:<password>@cluster0.vai5lbz.mongodb.net/?retryWrites=true&w=majority
