--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "yarn nodemon --inspect dist/index.js",
-    "test": "jest --runInBand "
+    "test": "npx kill-port 8080 && jest --runInBand "
   },
   "dependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/nodemailer": "^6.4.7",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.1",
+
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.30.0",
@@ -24,17 +21,21 @@
     "mongodb": "^5.2.0",
     "mongoose": "^7.2.0",
     "nodemailer": "^6.9.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
-    "dotenv": "^16.0.3",
+    "supertest": "^6.3.3",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
