--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "yarn nodemon --inspect dist/index.js",
-    "test": "npx kill-port 8080 && jest --runInBand "
+    "test": "npx kill-port 8080 && jest --runInBand --forceExit "
   },
   "dependencies": {
 
